.provarCaches/00D6C0000000xA6UAI/objects/sked__Job_Contact__c.object
<CustomObject>
    <description>A junction object between a job and a contact</description>
    <fields>
        <fullName>sked__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Contacts</relationshipLabel>
        <relationshipName>Job_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Job__c</fullName>
        <label>Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Job Contacts</relationshipLabel>
        <relationshipName>Job_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Site Manager</fullName>
                </value>
                <value>
                    <fullName>Safety Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Contact</label>
    <nameField>
        <displayFormat>JC-{00000}</displayFormat>
        <label>Job Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>